--- a/chat-ai.html
+++ b/chat-ai.html
@@ -4,64 +4,34 @@
   <meta charset="UTF-8">
   <title>Chat với AI - Trợ Lý Học Tập & AI</title>
   <link rel="icon" type="image/png" href="logo.png">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <style>
-    .chat-outer {
-      width: 97vw; max-width: 980px;
-      margin: 38px auto 18px auto;
-      border-radius: 28px;
-      background: #fff;
-      box-shadow: 0 8px 40px #185adb15;
-      min-height: 590px;
-      display: flex; flex-direction: column;
-      z-index: 2;
-      padding: 0;
+    /* CSS giữ nguyên như mẫu trước, chỉ chuyển selector .mini-header-ai, .api-btns-group... */
+    .mini-header-ai {
+      display: flex; align-items: center;
+      background: #fff; margin: 20px auto 0 auto; border-radius: 16px;
+      box-shadow: 0 2px 16px #185adb18; max-width: 1060px;
+      padding: 13px 24px; position: relative; z-index: 3; gap: 14px; height: 54px;
     }
-    .chat-header-bar {
-      padding: 0 38px; height: 76px; display: flex; align-items: center; border-bottom: 1.5px solid #e9f1fb; gap: 17px;
+    .mini-header-ai img {width: 32px; height: 32px; border-radius: 50%; background: #eaf3ff; margin-right: 8px;}
+    .mini-header-ai .mini-title {font-weight: 700; font-size: 1.12rem; color: #185adb;}
+    .api-btns-group {margin-left: auto; display:flex; gap:7px;}
+    .api-btn, .getkey-btn {
+      background: #f7faff; color: #185adb; border: 1.3px solid #b7d2fa; border-radius: 8px;
+      padding: 6px 15px; font-weight: 600; font-size: 1.01rem; cursor: pointer; transition: background 0.14s;
+      display: flex; align-items: center; gap: 6px; text-decoration:none;
     }
-    .chat-header-bar img {width: 46px; height: 46px; border-radius: 50%; background:#f5f8ff; box-shadow:0 2px 9px #185adb18;}
-    .chat-header-bar .chat-title {font-weight: bold; font-size: 1.22rem; color: #185adb; margin-left: 7px;}
-    .chat-header-bar .api-btn {margin-left: auto; background: #f5f8ff; color: #185adb; border: 1.5px solid #b7d2fa; border-radius: 8px;
-      padding: 7px 18px; font-weight: 600; font-size: 1.03rem; cursor: pointer; transition: background 0.15s;}
-    .chat-header-bar .api-btn:hover {background: #e7f0ff;}
-    .mode-switcher {display: flex; gap: 9px; margin: 22px 0 0 0; justify-content: center;}
-    .mode-btn {border-radius: 8px 8px 0 0; background: #f6faff; border: 1.5px solid #b7d2fa; padding: 8px 32px; color: #185adb;
-      font-weight: 700; font-size: 1.09rem; cursor: pointer; transition: background 0.16s, color 0.14s, box-shadow .16s; margin-bottom: -2px;}
-    .mode-btn.active, .mode-btn:hover {background: #185adb; color: #fff; box-shadow: 0 2px 16px #185adb18; border-bottom: 2px solid #185adb;}
-    .chat-body {flex: 1; padding: 0; overflow-y: auto; background: #f8fbff; display: flex; flex-direction: column;}
-    .chat-messages {padding: 26px 28px 10px 28px; overflow-y: auto; min-height: 360px; flex: 1;}
-    .msg-row {display: flex; margin-bottom: 18px;}
-    .msg-bubble {max-width: 85%; min-width: 58px; padding: 13px 18px; border-radius: 18px; font-size: 1.13rem; line-height: 1.6; box-shadow: 0 2px 10px #185adb12; white-space: pre-line;}
-    .msg-user {justify-content: flex-end;}
-    .msg-user .msg-bubble {background: linear-gradient(120deg, #185adb 0%, #3a67ee 100%); color: #fff; border-bottom-right-radius: 7px;}
-    .msg-ai {justify-content: flex-start;}
-    .msg-ai .msg-bubble {background: #eaf3ff; color: #222; border-bottom-left-radius: 7px;}
-    .chat-input-bar {display: flex; align-items: center; padding: 16px 28px 18px 28px; border-top: 1.2px solid #e7f0ff; gap: 8px; background: #f6faff;}
-    .chat-input-bar input {flex: 1; padding: 13px 15px; border-radius: 10px; border: 1.5px solid #bdd1f6; font-size: 1.09rem;}
-    .chat-input-bar button {padding: 13px 23px; border-radius: 8px; border: none; background: #185adb; color: #fff; font-weight: 600; font-size: 1.09rem; cursor: pointer; transition: background 0.16s;}
-    .chat-input-bar button:active {background:#153772;}
-    .api-btns-group {display: flex; gap: 10px; margin-left: auto;}
-    /* Popup */
-    .popup-api-bg {position:fixed;left:0;top:0;width:100vw;height:100vh;background:#0007;z-index:999;display:flex;align-items:center;justify-content:center;}
-    .popup-api-box {background:#fff;border-radius:13px;padding:32px 34px;box-shadow:0 10px 50px #185adb20;min-width:300px;max-width:94vw;text-align:center;}
-    .popup-api-box label {font-size:1.14rem;color:#185adb;font-weight:700;}
-    .popup-api-box input {margin-top:14px;padding:11px 13px;border-radius:8px;border:1.5px solid #bdd1f6;font-size:1.08rem;width:90%;max-width:340px;}
-    .popup-api-box .popup-btns {margin-top:22px;display:flex;justify-content:center;gap:17px;}
-    .popup-api-box button {padding:10px 23px;border-radius:8px;font-weight:600;font-size:1.08rem;border:none;cursor:pointer;background:#185adb;color:#fff;transition:background 0.15s;}
-    .popup-api-box button.cancel {background:#e7eaf6;color:#185adb;}
-    .popup-api-box button:active {background:#133b86;}
-    .popup-api-box .popup-desc {font-size:.98rem;color:#888;margin:7px 0 16px 0;}
-    @media (max-width:1200px) {.chat-outer{max-width:99vw;}}
-    @media (max-width:760px) {
-      .chat-outer {margin:12px 1vw;}
-      .chat-header-bar {padding:0 6px;}
-      .chat-messages {padding:11px 4vw 6px 4vw;}
-      .chat-input-bar {padding:8px 4vw 8px 4vw;}
-      .mode-btn {padding: 8px 9vw;}
-      .popup-api-box {padding:14px 2vw;}
-    }
+    .api-btn:hover, .getkey-btn:hover {background:#e7f0ff;}
+    /* ... giữ nguyên các style chat-outer, chat-messages, chat-input-bar, mode-switcher, mode-btn, popup-api-box ... */
+    .chat-outer {width:99vw;max-width:1060px;margin:0 auto 25px auto;border-radius:30px;background:#fff;box-shadow:0 8px 40px #185adb18;min-height:620px;display:flex;flex-direction:column;z-index:2;padding:0;}
+    .mode-switcher{display:flex;gap:12px;margin:22px 0 0 0;justify-content:center;}
+    .mode-btn{border-radius:9px 9px 0 0;background:#f6faff;border:1.6px solid #b7d2fa;padding:12px 45px;color:#185adb;font-weight:700;font-size:1.13rem;cursor:pointer;transition:background 0.16s,color 0.14s,box-shadow .16s;}
+    .mode-btn.active,.mode-btn:hover{background:#185adb;color:#fff;box-shadow:0 2px 14px #185adb13;border-bottom:2px solid #185adb;}
+    .chat-messages{padding:30px 38px 12px 38px;overflow-y:auto;min-height:410px;flex:1;}
+    .chat-input-bar{padding:18px 38px 18px 38px;}
+    @media (max-width:1200px){.chat-outer,.mini-header-ai{max-width:99vw;}.mini-header-ai{padding:10px 2vw;}}
+    @media (max-width:750px){.chat-outer,.mini-header-ai{max-width:99vw;}.chat-messages{padding:11px 3vw 6px 3vw;}.chat-input-bar{padding:8px 3vw 8px 3vw;}.mode-btn{padding:10px 4vw;}}
   </style>
 </head>
 <body>
@@ -69,17 +39,9 @@
   <div class="bg-deco right"></div>
   <canvas class="star-canvas"></canvas>
   <div id="header"></div>
-
+  <div id="mini-header-ai"></div>
   <main style="margin:0;padding:0;">
     <div class="chat-outer">
-      <div class="chat-header-bar">
-        <img src="icon-ai.png" alt="AI">
-        <span class="chat-title">Trợ lý AI học tập</span>
-        <div class="api-btns-group">
-          <button class="api-btn" onclick="openAPIKeyPopup('gpt')">🔑 GPT Key</button>
-          <button class="api-btn" onclick="openAPIKeyPopup('gemini')">🔑 Gemini Key</button>
-        </div>
-      </div>
       <div class="mode-switcher">
         <button class="mode-btn active" onclick="switchMode('chatbase')">Chatbase</button>
         <button class="mode-btn" onclick="switchMode('gpt')">Chat GPT</button>
@@ -88,8 +50,8 @@
       <div class="chat-body">
         <!-- Chatbase -->
         <div id="chatbase-chat" class="chat-messages" style="display:block;text-align:center;">
-          <iframe src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_" width="97%" height="420"
-            style="border-radius:13px;border:1.5px solid #eee;background:#fff;box-shadow:0 4px 16px #185adb19;"
+          <iframe src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_" width="98%" height="430"
+            style="border-radius:15px;border:1.5px solid #eee;background:#fff;box-shadow:0 4px 16px #185adb17;"
             allow="clipboard-write"></iframe>
         </div>
         <!-- GPT Chat -->
@@ -108,8 +70,7 @@
       </div>
     </div>
   </main>
-
-  <!-- Popup nhập API Key, tự động đổi nội dung -->
+  <!-- Popup nhập API Key như các bản trước -->
   <div class="popup-api-bg" id="popup-api" style="display:none;">
     <div class="popup-api-box">
       <label id="popup-label"></label>
@@ -122,12 +83,36 @@
       </div>
     </div>
   </div>
-
   <div id="footer"></div>
   <script src="main.js"></script>
   <script>
-    // --- Chọn chế độ chat
+    // Import mini-header-ai (dùng fetch giống như header/footer)
+    function loadMiniHeaderAI() {
+      fetch('mini-header-ai.html').then(res=>res.text()).then(data=>{
+        document.getElementById('mini-header-ai').innerHTML = data;
+        renderApiBtns('chatbase'); // Default
+      });
+    }
+    loadMiniHeaderAI();
+
+    // --- Mode và render nút Key/link Key đúng chế độ ---
     let chatMode = 'chatbase';
+    function renderApiBtns(mode) {
+      const group = document.getElementById('api-btns-group');
+      if(!group) return;
+      group.innerHTML = '';
+      if(mode==='gpt') {
+        group.innerHTML = `
+          <a class="getkey-btn" href="https://platform.openai.com/settings/organization/api-keys" target="_blank">🔗 Lấy GPT Key</a>
+          <button class="api-btn" onclick="openAPIKeyPopup('gpt')">🔑 Nhập GPT Key</button>
+        `;
+      } else if(mode==='gemini') {
+        group.innerHTML = `
+          <a class="getkey-btn" href="https://aistudio.google.com/apikey" target="_blank">🔗 Lấy Gemini Key</a>
+          <button class="api-btn" onclick="openAPIKeyPopup('gemini')">🔑 Nhập Gemini Key</button>
+        `;
+      }
+    }
     function switchMode(mode) {
       chatMode = mode;
       document.querySelectorAll('.mode-btn').forEach((el,i)=>{
@@ -139,9 +124,9 @@
       document.getElementById('gpt-input').style.display = mode==='gpt'?'flex':'none';
       document.getElementById('gemini-chat').style.display = mode==='gemini'?'block':'none';
       document.getElementById('gemini-input').style.display = mode==='gemini'?'flex':'none';
+      renderApiBtns(mode);
       scrollToBottom();
     }
-
     // ==== API Key riêng cho từng loại ====
     function getAPIKey(type) {
       if (type==='gpt') return localStorage.getItem('openai_api_key')||'';
@@ -168,12 +153,12 @@
       let ph = "";
       if(type==='gpt') {
         label = "Nhập OpenAI API Key (GPT)";
-        desc = "Tạo key ở https://platform.openai.com/api-keys<br>(Ví dụ: sk-...)";
+        desc = "Tạo key ở <a href='https://platform.openai.com/settings/organization/api-keys' target='_blank'>https://platform.openai.com/...</a><br>(Ví dụ: sk-...)";
         ph = "sk-...";
       }
       if(type==='gemini') {
         label = "Nhập Google Gemini API Key";
-        desc = "Tạo key ở https://aistudio.google.com/app/apikey<br>(Ví dụ: AIza...)";
+        desc = "Tạo key ở <a href='https://aistudio.google.com/apikey' target='_blank'>https://aistudio.google.com/apikey</a><br>(Ví dụ: AIza...)";
         ph = "AIza...";
       }
       document.getElementById('popup-label').innerHTML = label;
@@ -189,9 +174,8 @@
       alert('Đã lưu API key vào trình duyệt!');
       closeAPIKeyPopup();
     }
-
-    // ------ Chat GPT ------
-    let gptMsgs = [];
+    // ------ Chat GPT/Gemini ... giữ nguyên như các code trước ------
+    let gptMsgs = [], geminiMsgs = [];
     async function sendMsgGPT() {
       let key = getAPIKey('gpt');
       let msg = document.getElementById('userMsg-gpt').value.trim();
@@ -201,39 +185,24 @@
       renderChat('gpt-chat', gptMsgs);
       document.getElementById('userMsg-gpt').value = '';
       gptMsgs.push({role:'assistant',content:'<i>Đang trả lời...</i>'});
-      renderChat('gpt-chat', gptMsgs);
-      scrollToBottom();
-
+      renderChat('gpt-chat', gptMsgs); scrollToBottom();
       try {
         let res = await fetch('https://api.openai.com/v1/chat/completions', {
           method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'Authorization': `Bearer ${key}`
-          },
+          headers: {'Content-Type': 'application/json','Authorization': `Bearer ${key}`},
           body: JSON.stringify({
             model: "gpt-3.5-turbo",
-            messages: [
-              {role:"system",content:"Bạn là trợ lý AI học tập, trả lời ngắn gọn, thân thiện."},
-              ...gptMsgs.filter(m=>m.role==='user')
-            ]
+            messages: [{role:"system",content:"Bạn là trợ lý AI học tập, trả lời ngắn gọn, thân thiện."},
+              ...gptMsgs.filter(m=>m.role==='user')]
           })
         });
         let data = await res.json();
         gptMsgs.pop();
         let reply = data.choices?.[0]?.message?.content || "Có lỗi xảy ra!";
         gptMsgs.push({role:'assistant',content:reply});
-        renderChat('gpt-chat', gptMsgs);
-        scrollToBottom();
-      } catch (e) {
-        gptMsgs.pop();
-        gptMsgs.push({role:'assistant',content:'Lỗi gọi API!'});
-        renderChat('gpt-chat', gptMsgs);
-      }
+        renderChat('gpt-chat', gptMsgs); scrollToBottom();
+      } catch (e) {gptMsgs.pop();gptMsgs.push({role:'assistant',content:'Lỗi gọi API!'});renderChat('gpt-chat', gptMsgs);}
     }
-
-    // ------ Chat Gemini (dùng Gemini Flash 2.0) ------
-    let geminiMsgs = [];
     async function sendMsgGemini() {
       let key = getAPIKey('gemini');
       let msg = document.getElementById('userMsg-gemini').value.trim();
@@ -243,42 +212,27 @@
       renderChat('gemini-chat', geminiMsgs);
       document.getElementById('userMsg-gemini').value = '';
       geminiMsgs.push({role:'assistant',content:'<i>Đang trả lời...</i>'});
-      renderChat('gemini-chat', geminiMsgs);
-      scrollToBottom();
-
+      renderChat('gemini-chat', geminiMsgs); scrollToBottom();
       try {
         let URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${key}`;
-        let res = await fetch(
-          URL,
-          {
+        let res = await fetch(URL, {
             method: 'POST',
             headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({
-              contents: [{parts: [{text: msg}]}]
-            })
+            body: JSON.stringify({contents: [{parts: [{text: msg}]}]})
           }
         );
         let data = await res.json();
         geminiMsgs.pop();
         let reply = data.candidates?.[0]?.content?.parts?.[0]?.text || "Có lỗi xảy ra!";
         geminiMsgs.push({role:'assistant',content:reply});
-        renderChat('gemini-chat', geminiMsgs);
-        scrollToBottom();
-      } catch (e) {
-        geminiMsgs.pop();
-        geminiMsgs.push({role:'assistant',content:'Lỗi gọi API!'});
-        renderChat('gemini-chat', geminiMsgs);
-      }
+        renderChat('gemini-chat', geminiMsgs); scrollToBottom();
+      } catch (e) {geminiMsgs.pop();geminiMsgs.push({role:'assistant',content:'Lỗi gọi API!'});renderChat('gemini-chat', geminiMsgs);}
     }
-
-    // ------ Hiển thị lịch sử chat ------
     function renderChat(boxId, msgs) {
       let html = '';
       for(let m of msgs){
         let user = (m.role==='user');
-        html += `<div class="msg-row ${user?'msg-user':'msg-ai'}">
-          <div class="msg-bubble">${m.content}</div>
-        </div>`;
+        html += `<div class="msg-row ${user?'msg-user':'msg-ai'}"><div class="msg-bubble">${m.content}</div></div>`;
       }
       document.getElementById(boxId).innerHTML = html;
     }
