--- a/chat-ai.html
+++ b/chat-ai.html
@@ -7,31 +7,125 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <style>
-    /* CSS giữ nguyên như mẫu trước, chỉ chuyển selector .mini-header-ai, .api-btns-group... */
-    .mini-header-ai {
-      display: flex; align-items: center;
-      background: #fff; margin: 20px auto 0 auto; border-radius: 16px;
-      box-shadow: 0 2px 16px #185adb18; max-width: 1060px;
-      padding: 13px 24px; position: relative; z-index: 3; gap: 14px; height: 54px;
+    body {background:var(--bg1);}
+    .chat-main-card {
+      margin: 32px auto 32px auto;
+      max-width: 900px;
+      min-height: 650px;
+      background: #fff;
+      border-radius: 26px;
+      box-shadow: 0 8px 48px #185adb22;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      padding: 0;
     }
-    .mini-header-ai img {width: 32px; height: 32px; border-radius: 50%; background: #eaf3ff; margin-right: 8px;}
-    .mini-header-ai .mini-title {font-weight: 700; font-size: 1.12rem; color: #185adb;}
-    .api-btns-group {margin-left: auto; display:flex; gap:7px;}
+    .mini-title-bar {
+      font-weight: 700; color: #185adb; background: transparent;
+      padding: 16px 0 0 0; text-align: left; font-size: 1.10rem;
+      letter-spacing: .2px; margin-left:38px; margin-bottom:3px;
+      display: flex; align-items: center; gap: 9px;
+    }
+    .mini-title-bar .icon {width: 26px; height: 26px; border-radius: 50%; background: #eaf3ff;}
+    .api-btns-group {
+      margin-left:auto; display:flex; gap:7px; font-size:0.95rem;
+    }
     .api-btn, .getkey-btn {
-      background: #f7faff; color: #185adb; border: 1.3px solid #b7d2fa; border-radius: 8px;
-      padding: 6px 15px; font-weight: 600; font-size: 1.01rem; cursor: pointer; transition: background 0.14s;
-      display: flex; align-items: center; gap: 6px; text-decoration:none;
+      background: #f4f7fe; color: #185adb; border: 1px solid #b7d2fa; border-radius: 7px;
+      padding: 4px 13px; font-weight: 600; font-size: 0.99rem; cursor: pointer; transition: background 0.13s; text-decoration:none;
+      display: flex; align-items: center; gap: 5px; margin-left:5px;
     }
     .api-btn:hover, .getkey-btn:hover {background:#e7f0ff;}
-    /* ... giữ nguyên các style chat-outer, chat-messages, chat-input-bar, mode-switcher, mode-btn, popup-api-box ... */
-    .chat-outer {width:99vw;max-width:1060px;margin:0 auto 25px auto;border-radius:30px;background:#fff;box-shadow:0 8px 40px #185adb18;min-height:620px;display:flex;flex-direction:column;z-index:2;padding:0;}
-    .mode-switcher{display:flex;gap:12px;margin:22px 0 0 0;justify-content:center;}
-    .mode-btn{border-radius:9px 9px 0 0;background:#f6faff;border:1.6px solid #b7d2fa;padding:12px 45px;color:#185adb;font-weight:700;font-size:1.13rem;cursor:pointer;transition:background 0.16s,color 0.14s,box-shadow .16s;}
-    .mode-btn.active,.mode-btn:hover{background:#185adb;color:#fff;box-shadow:0 2px 14px #185adb13;border-bottom:2px solid #185adb;}
-    .chat-messages{padding:30px 38px 12px 38px;overflow-y:auto;min-height:410px;flex:1;}
-    .chat-input-bar{padding:18px 38px 18px 38px;}
-    @media (max-width:1200px){.chat-outer,.mini-header-ai{max-width:99vw;}.mini-header-ai{padding:10px 2vw;}}
-    @media (max-width:750px){.chat-outer,.mini-header-ai{max-width:99vw;}.chat-messages{padding:11px 3vw 6px 3vw;}.chat-input-bar{padding:8px 3vw 8px 3vw;}.mode-btn{padding:10px 4vw;}}
+    .mode-switcher {
+      display: flex; gap: 0; margin: 0 0 7px 0; border-bottom:1.3px solid #e5eefa; background: #fff;
+      justify-content: flex-start; padding-left:38px;
+    }
+    .mode-btn {
+      border: none; background: none;
+      padding: 16px 38px 12px 38px;
+      font-weight: 600; color: #97a4c1; font-size: 1.09rem;
+      cursor: pointer; border-bottom: 2.5px solid transparent; outline: none;
+      transition: all .15s;
+    }
+    .mode-btn.active, .mode-btn:focus {
+      color: #185adb; border-bottom: 2.5px solid #185adb; background: #f7faff;
+    }
+    .chat-body {
+      flex: 1; padding: 0; overflow-y: auto; background: #f7faff;
+      border-radius: 0 0 26px 26px;
+      display: flex; flex-direction: column;
+      min-height: 380px;
+    }
+    .chat-messages {
+      padding: 32px 44px 8px 44px;
+      overflow-y: auto; flex: 1;
+      min-height: 320px;
+      font-size: 1.08rem;
+      display: flex; flex-direction: column;
+      gap: 7px;
+    }
+    .msg-row {display: flex;}
+    .msg-bubble {
+      max-width: 72vw; min-width: 50px;
+      padding: 13px 17px;
+      border-radius: 16px;
+      font-size: 1.13rem;
+      line-height: 1.7;
+      box-shadow: 0 1px 8px #185adb0c;
+      white-space: pre-line;
+      margin-bottom: 3px;
+      word-break: break-word;
+    }
+    .msg-user {justify-content: flex-end;}
+    .msg-user .msg-bubble {
+      background: linear-gradient(110deg, #185adb 0%, #356ad2 100%);
+      color: #fff; border-bottom-right-radius: 7px;
+    }
+    .msg-ai {justify-content: flex-start;}
+    .msg-ai .msg-bubble {
+      background: #eaf3ff;
+      color: #222; border-bottom-left-radius: 7px;
+    }
+    .chat-input-bar {
+      display: flex; align-items: flex-end;
+      gap: 13px; background: #f4f7fa;
+      padding: 20px 36px 28px 36px;
+      border-radius: 0 0 26px 26px;
+      border-top: 1.2px solid #e7f0ff;
+      box-shadow: 0 0.5px 0 #e6eef9;
+    }
+    .chat-input-bar input {
+      flex: 1; font-size: 1.11rem; padding: 15px 16px; border-radius: 14px;
+      border: 1.5px solid #bdd1f6; outline:none; box-shadow:0 1.5px 8px #185adb09;
+      background: #fff; transition: border 0.16s;
+    }
+    .chat-input-bar input:focus {border:1.5px solid #185adb;}
+    .chat-input-bar button {
+      padding: 0 0 0 0; border: none; background: none;
+      width: 52px; height: 52px; border-radius: 50%;
+      background: #185adb; color: #fff;
+      font-size: 1.45rem; display:flex; align-items:center;justify-content:center;
+      cursor:pointer; box-shadow:0 2px 10px #185adb1a;
+      transition: background 0.13s;
+    }
+    .chat-input-bar button:active {background:#153772;}
+    /* Popup giữ nguyên code cũ */
+    .popup-api-bg {position:fixed;left:0;top:0;width:100vw;height:100vh;background:#0007;z-index:999;display:flex;align-items:center;justify-content:center;}
+    .popup-api-box {background:#fff;border-radius:13px;padding:32px 34px;box-shadow:0 10px 50px #185adb20;min-width:300px;max-width:94vw;text-align:center;}
+    .popup-api-box label {font-size:1.14rem;color:#185adb;font-weight:700;}
+    .popup-api-box input {margin-top:14px;padding:11px 13px;border-radius:8px;border:1.5px solid #bdd1f6;font-size:1.08rem;width:90%;max-width:340px;}
+    .popup-api-box .popup-btns {margin-top:22px;display:flex;justify-content:center;gap:17px;}
+    .popup-api-box button {padding:10px 23px;border-radius:8px;font-weight:600;font-size:1.08rem;border:none;cursor:pointer;background:#185adb;color:#fff;transition:background 0.15s;}
+    .popup-api-box button.cancel {background:#e7eaf6;color:#185adb;}
+    .popup-api-box button:active {background:#133b86;}
+    .popup-api-box .popup-desc {font-size:.98rem;color:#888;margin:7px 0 16px 0;}
+    @media (max-width:1200px) {.chat-main-card{max-width:99vw;}}
+    @media (max-width:750px) {
+      .chat-main-card {margin:9px 2vw; border-radius:18px;}
+      .chat-messages {padding:13px 2vw 7px 2vw;}
+      .chat-input-bar {padding:7px 2vw 12px 2vw; border-radius:0 0 18px 18px;}
+      .mode-switcher{padding-left:0;}
+    }
   </style>
 </head>
 <body>
@@ -39,9 +133,14 @@
   <div class="bg-deco right"></div>
   <canvas class="star-canvas"></canvas>
   <div id="header"></div>
-  <div id="mini-header-ai"></div>
-  <main style="margin:0;padding:0;">
-    <div class="chat-outer">
+  <main>
+    <div class="chat-main-card">
+      <!-- Mini title bar, nhỏ như ChatGPT (hoặc ẩn nếu thích) -->
+      <div class="mini-title-bar">
+        <img class="icon" src="icon-ai.png" alt="AI">
+        <span>Trợ lý AI học tập</span>
+        <div class="api-btns-group" id="api-btns-group"></div>
+      </div>
       <div class="mode-switcher">
         <button class="mode-btn active" onclick="switchMode('chatbase')">Chatbase</button>
         <button class="mode-btn" onclick="switchMode('gpt')">Chat GPT</button>
@@ -50,8 +149,8 @@
       <div class="chat-body">
         <!-- Chatbase -->
         <div id="chatbase-chat" class="chat-messages" style="display:block;text-align:center;">
-          <iframe src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_" width="98%" height="430"
-            style="border-radius:15px;border:1.5px solid #eee;background:#fff;box-shadow:0 4px 16px #185adb17;"
+          <iframe src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_" width="98%" height="420"
+            style="border-radius:13px;border:1.5px solid #eee;background:#fff;box-shadow:0 4px 16px #185adb17;"
             allow="clipboard-write"></iframe>
         </div>
         <!-- GPT Chat -->
@@ -59,18 +158,19 @@
         <!-- Gemini Chat -->
         <div id="gemini-chat" class="chat-messages" style="display:none;"></div>
       </div>
+      <!-- Ô nhập chat (không dùng với Chatbase) -->
       <div class="chat-input-bar" id="chatbase-input" style="display:none;"></div>
       <div class="chat-input-bar" id="gpt-input" style="display:none;">
         <input id="userMsg-gpt" type="text" placeholder="Nhập câu hỏi..." autocomplete="off" onkeydown="if(event.key==='Enter'){sendMsgGPT();}">
-        <button onclick="sendMsgGPT()">Gửi</button>
+        <button onclick="sendMsgGPT()"><span>&#10148;</span></button>
       </div>
       <div class="chat-input-bar" id="gemini-input" style="display:none;">
         <input id="userMsg-gemini" type="text" placeholder="Nhập câu hỏi..." autocomplete="off" onkeydown="if(event.key==='Enter'){sendMsgGemini();}">
-        <button onclick="sendMsgGemini()">Gửi</button>
+        <button onclick="sendMsgGemini()"><span>&#10148;</span></button>
       </div>
     </div>
   </main>
-  <!-- Popup nhập API Key như các bản trước -->
+  <!-- Popup nhập API Key như trước -->
   <div class="popup-api-bg" id="popup-api" style="display:none;">
     <div class="popup-api-box">
       <label id="popup-label"></label>
@@ -86,20 +186,11 @@
   <div id="footer"></div>
   <script src="main.js"></script>
   <script>
-    // Import mini-header-ai (dùng fetch giống như header/footer)
-    function loadMiniHeaderAI() {
-      fetch('mini-header-ai.html').then(res=>res.text()).then(data=>{
-        document.getElementById('mini-header-ai').innerHTML = data;
-        renderApiBtns('chatbase'); // Default
-      });
-    }
-    loadMiniHeaderAI();
-
     // --- Mode và render nút Key/link Key đúng chế độ ---
     let chatMode = 'chatbase';
     function renderApiBtns(mode) {
       const group = document.getElementById('api-btns-group');
-      if(!group) return;
+      if(!group) return group.innerHTML = "";
       group.innerHTML = '';
       if(mode==='gpt') {
         group.innerHTML = `
@@ -174,7 +265,7 @@
       alert('Đã lưu API key vào trình duyệt!');
       closeAPIKeyPopup();
     }
-    // ------ Chat GPT/Gemini ... giữ nguyên như các code trước ------
+    // ------ Chat GPT/Gemini ... giữ nguyên như code trước ------
     let gptMsgs = [], geminiMsgs = [];
     async function sendMsgGPT() {
       let key = getAPIKey('gpt');
@@ -241,6 +332,8 @@
         document.querySelectorAll('.chat-messages').forEach(box=>{box.scrollTop = box.scrollHeight+77;});
       }, 80);
     }
+    // Khởi tạo mặc định đúng nút key
+    window.onload = ()=>{renderApiBtns('chatbase');}
   </script>
 </body>
 </html>
