--- a/chat-ai.html
+++ b/chat-ai.html
@@ -169,10 +169,12 @@
     </div>
     <div class="chat-body">
       <div id="chatbase-chat" class="chat-messages" style="display:block;text-align:center;padding:0;">
-        <iframe src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_"
-          width="100%" height="420"
-          style="border-radius:10px;border:1.5px solid #eee;background:#fff;box-shadow:0 4px 16px #185adb0d;"
-          allow="clipboard-write"></iframe>
+  <iframe
+  src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_"
+  width="100%"
+  height="calc(100vh - 140px)"
+  style="max-width:100vw;min-width:99vw;border:none;box-shadow:none;"
+  allow="clipboard-write"></iframe>>
       </div>
       <div id="gpt-chat" class="chat-messages" style="display:none;"></div>
       <div id="gemini-chat" class="chat-messages" style="display:none;"></div>
