--- a/chat-ai.html
+++ b/chat-ai.html
@@ -172,7 +172,7 @@
   <iframe
   src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_"
   width="100%"
-  height="calc(100vh - 140px)"
+  height="calc(700)"
   style="max-width:100vw;min-width:99vw;border:none;box-shadow:none;"
   allow="clipboard-write"></iframe>>
       </div>
