--- a/chat-ai.html
+++ b/chat-ai.html
@@ -187,7 +187,10 @@
       <button onclick="sendMsgGemini()"><span>&#10148;</span></button>
     </div>
   </main>
-  <div id="footer">© 2025 Tra Cứu Học Thuật & AI • Thiết kế bởi KoHa</div>
+  <footer style="width:100vw; border: none; background: none; margin:0; padding:0;">
+  <iframe src="footer.html" style="width:100vw; height:60px; border:none; background:none;" scrolling="no"></iframe>
+</footer>
+
   <!-- Popup nhập API Key -->
   <div class="popup-api-bg" id="popup-api" style="display:none;">
     <div class="popup-api-box">
