--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,20 @@
 <!-- footer.html -->
-<footer>
-  &copy; 2025 Tra Cứu Học Thuật & AI &bull; Thiết kế bởi KoHa
+<footer style="
+  width: 100vw;
+  background: #f4f9ff;
+  color: #185adb;
+  font-family: 'Montserrat', Arial, sans-serif;
+  font-size: 1.04rem;
+  font-weight: 600;
+  text-align: center;
+  padding: 18px 0 14px 0;
+  border-top: 1.5px solid #e3e9f7;
+  box-shadow: 0 -2px 16px #185adb13;
+  border-radius: 24px 24px 0 0;
+  letter-spacing: .01em;
+  margin: 0;
+">
+  &copy; 2025 <span style="color:#185adb;font-weight:700;">Tra Cứu Học Thuật &amp; AI</span>
+  <span style="color:#97a4c1;">&bull;</span>
+  <span style="color:#222;font-weight:500;">Thiết kế bởi <span style="color:#185adb;">KoHa</span></span>
 </footer>
